<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true"
            android:fillViewport="true"
            android:layout_weight="1"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".Book_Activity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/first_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:alpha="0.69"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/sec_img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]"/>

        <ImageView
                android:id="@+id/sec_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.69"
                android:scaleType="centerCrop"
                android:src="@drawable/joker"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_img"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <ImageView
                android:id="@+id/bookthumbnail"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/alita"
                app:layout_constraintBottom_toBottomOf="@id/first_img"
                app:layout_constraintCircleRadius="@android:dimen/thumbnail_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_img"
                tools:srcCompat="@tools:sample/avatars"/>

        <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/book_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toEndOf="@+id/bookthumbnail"
                app:layout_constraintTop_toBottomOf="@+id/first_img"/>

        <TextView
                android:id="@+id/txtCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#edecec"
                android:padding="8dp"
                android:text="@string/category"
                app:layout_constraintBottom_toTopOf="@id/txtDesript"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bookthumbnail"/>

        <TextView
                android:id="@+id/txtDesript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/ratingBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCat"/>

        <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.Material.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:isIndicator="false"
                android:numStars="5"
                android:progressBackgroundTint="#2d2d2d"
                android:progressTint="#FFD700"
                app:layout_constraintBottom_toTopOf="@id/review"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesript"
                tools:targetApi="lollipop"/>

        <EditText
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingBar"
                android:autofillHints=""
                android:hint="@string/movie_description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:scrollIndicators="right"
                android:scrollbarFadeDuration="@android:integer/config_longAnimTime"
                android:scrollbarSize="8dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@id/submit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"
                tools:text="@tools:sample/lorem/random"/>

        <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:onClick="submitRatingReview"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
